Update README for Java 21